[build-system]
requires = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "st_mapping"
version = "0.1.0"
requires-python = ">=3.9"  # works with your Python 3.11

[tool.scikit-build]
build-dir = "build/{wheel_tag}"        # needed if editable.rebuild = true
wheel.install-dir = "st_mapping/pybind/"
editable.mode = "redirect"
editable.rebuild = true
cmake.minimum-version = "3.16"
